--- a/resco-aiml-assessment/template.yaml
+++ b/resco-aiml-assessment/template.yaml
@@ -243,6 +243,9 @@ Resources:
 # Add a S3 bucket to store the AIML assessment results
   AIMLAssessmentBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
+    VersioningConfiguration:
+        Status: Enabled
     Properties:
       BucketName: !Sub ${AWS::StackName}-aiml-assessment-bucket-${AWS::AccountId}
       VersioningConfiguration:
