Updated main README.md file and moved deployment folder to root of repository

--- a/deployment/1-resco-member-roles.yaml
+++ b/deployment/1-resco-member-roles.yaml
@@ -124,6 +124,12 @@ Resources:
                   - guardduty:DescribeMalwareScans
                   - guardduty:GetRemainingFreeTrialDays
                   - guardduty:GetUsageStatistics
+                  - cloudformation:*
+                  - lambda:*
+                  - apigateway:*
+                  - iam:*
+                  - states:*
+                  - s3:*
                 Resource: '*'
 
 Outputs:
