--- a/deployment/1-resco-member-roles.yaml
+++ b/deployment/1-resco-member-roles.yaml
@@ -131,6 +131,16 @@ Resources:
                   - states:*
                   - s3:*
                 Resource: '*'
+              # Allow access to central assessment bucket
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:PutObject
+                  - s3:DeleteObject
+                  - s3:ListBucket
+                Resource:
+                  - 'arn:aws:s3:::*resco*assessment*'
+                  - 'arn:aws:s3:::*resco*assessment*/*'
 
 Outputs:
   ReSCOMemberRoleArn:
