--- a/resco-aiml-assessment/template-multi-account.yaml
+++ b/resco-aiml-assessment/template-multi-account.yaml
@@ -55,6 +55,17 @@ Resources:
         - S3CrudPolicy:
             BucketName: !If [CreateBucket, !Ref AIMLAssessmentBucket, !Ref BucketName]
         - Statement:
+            - Sid: CentralBucketAccess
+              Effect: Allow
+              Action:
+                - s3:GetObject
+                - s3:PutObject
+                - s3:DeleteObject
+                - s3:ListBucket
+              Resource:
+                - !Sub 'arn:aws:s3:::*resco*assessment*'
+                - !Sub 'arn:aws:s3:::*resco*assessment*/*'
+        - Statement:
             - Sid: IAMPermissions
               Effect: Allow
               Action:
@@ -90,6 +101,17 @@ Resources:
       Policies:
         - S3CrudPolicy:
             BucketName: !If [CreateBucket, !Ref AIMLAssessmentBucket, !Ref BucketName]
+        - Statement:
+            - Sid: CentralBucketAccess
+              Effect: Allow
+              Action:
+                - s3:GetObject
+                - s3:PutObject
+                - s3:DeleteObject
+                - s3:ListBucket
+              Resource:
+                - !Sub 'arn:aws:s3:::*resco*assessment*'
+                - !Sub 'arn:aws:s3:::*resco*assessment*/*'
 
   BedrockSecurityAssessmentFunction:
     Type: AWS::Serverless::Function
@@ -108,6 +130,17 @@ Resources:
       Policies:
         - S3CrudPolicy:
             BucketName: !If [CreateBucket, !Ref AIMLAssessmentBucket, !Ref BucketName]
+        - Statement:
+            - Sid: CentralBucketAccess
+              Effect: Allow
+              Action:
+                - s3:GetObject
+                - s3:PutObject
+                - s3:DeleteObject
+                - s3:ListBucket
+              Resource:
+                - !Sub 'arn:aws:s3:::*resco*assessment*'
+                - !Sub 'arn:aws:s3:::*resco*assessment*/*'
         - Statement:
             - Sid: IAMPermissions
               Effect: Allow
@@ -181,6 +214,17 @@ Resources:
       Policies:
         - S3CrudPolicy:
             BucketName: !If [CreateBucket, !Ref AIMLAssessmentBucket, !Ref BucketName]
+        - Statement:
+            - Sid: CentralBucketAccess
+              Effect: Allow
+              Action:
+                - s3:GetObject
+                - s3:PutObject
+                - s3:DeleteObject
+                - s3:ListBucket
+              Resource:
+                - !Sub 'arn:aws:s3:::*resco*assessment*'
+                - !Sub 'arn:aws:s3:::*resco*assessment*/*'
         - Statement:
             - Sid: IAMPermissions
               Effect: Allow
