--- a/deployment/2-resco-multi-account-assessment.yaml
+++ b/deployment/2-resco-multi-account-assessment.yaml
@@ -275,7 +275,19 @@ Resources:
                   - s3:PutBucketPolicy
                   - s3:PutBucketVersioning
                   - s3:PutPublicAccessBlock
+                  - s3:PutBucketPublicAccessBlock
+                  - s3:GetBucketPublicAccessBlock
+                  - s3:PutBucketAcl
+                  - s3:GetBucketAcl
+                  - s3:PutBucketTagging
+                  - s3:GetBucketTagging
+                  - s3:PutBucketNotification
+                  - s3:GetBucketNotification
+                  - s3:PutBucketLogging
+                  - s3:GetBucketLogging
                   - s3:ListBucket
+                  - s3:GetBucketLocation
+                  - s3:GetBucketVersioning
                 Effect: Allow
                 Resource: '*'
 
