--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,18 +41,6 @@ phases:
             if [[ $STATE_MACHINE_ARN != "" ]]; then
               EXECUTION_ARN=$(aws stepfunctions start-execution --state-machine-arn $STATE_MACHINE_ARN --input "{\"accountId\":\"$accountId\"}" --query 'executionArn' --output text)
               echo "Started execution: $EXECUTION_ARN"
-              
-              # Wait for execution to complete
-              echo "Waiting for execution to complete for account $accountId"
-              aws stepfunctions wait execution-succeeded --execution-arn $EXECUTION_ARN || echo "Execution may have failed for $accountId"
-              
-              # Copy files from member account bucket to CodeBuild environment
-              ACCOUNT_BUCKET=$(aws cloudformation describe-stacks --stack-name resco-aiml-security-$accountId --query 'Stacks[0].Outputs[?OutputKey==`AssessmentBucketName`].OutputValue' --output text 2>/dev/null)
-              if [[ $ACCOUNT_BUCKET != "" ]]; then
-                echo "Copying files from $ACCOUNT_BUCKET to local storage"
-                mkdir -p /tmp/account-files/$accountId
-                aws s3 cp s3://$ACCOUNT_BUCKET/ /tmp/account-files/$accountId/ --recursive --exclude "*" --include "*.csv" --include "*.html" || echo "No files to copy from $accountId"
-              fi
             fi
             unset AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY AWS_SESSION_TOKEN
           done
@@ -62,18 +50,6 @@ phases:
           if [[ $STATE_MACHINE_ARN != "" ]]; then
             MGMT_EXECUTION_ARN=$(aws stepfunctions start-execution --state-machine-arn $STATE_MACHINE_ARN --input "{\"accountId\":\"$AWS_ACCOUNT_ID\"}" --query 'executionArn' --output text)
             echo "Started management account execution: $MGMT_EXECUTION_ARN"
-            
-            # Wait for management account execution to complete
-            echo "Waiting for management account execution to complete"
-            aws stepfunctions wait execution-succeeded --execution-arn $MGMT_EXECUTION_ARN || echo "Management execution may have failed"
-            
-            # Copy management account files to local storage
-            MGMT_BUCKET=$(aws cloudformation describe-stacks --stack-name resco-aiml-security-mgmt --query 'Stacks[0].Outputs[?OutputKey==`AssessmentBucketName`].OutputValue' --output text 2>/dev/null)
-            if [[ $MGMT_BUCKET != "" ]]; then
-              echo "Copying management account files to local storage"
-              mkdir -p /tmp/account-files/$AWS_ACCOUNT_ID
-              aws s3 cp s3://$MGMT_BUCKET/ /tmp/account-files/$AWS_ACCOUNT_ID/ --recursive --exclude "*" --include "*.csv" --include "*.html" || echo "No files to copy from management account"
-            fi
           fi
         else
           echo "Single account deployment"
@@ -86,11 +62,45 @@ phases:
       - echo "Assessment completed. Results in S3:$BUCKET_REPORT"
       - |
         if [[ $MULTI_ACCOUNT_SCAN = 'true' ]]; then
+          echo "Getting list of accounts to scan"
+          if [[ $MULTI_ACCOUNT_LIST_OVERRIDE != '' ]]; then
+            account_list=$MULTI_ACCOUNT_LIST_OVERRIDE
+          else
+            account_list=$(aws organizations list-accounts --query 'Accounts[?Status==`ACTIVE`].Id' --output text)
+          fi
+          
+          echo "Copying files from respective account S3 buckets to CodeBuild environment"
+          for accountId in $account_list; do
+            if [[ $accountId == $AWS_ACCOUNT_ID ]]; then
+              echo "Processing management account $accountId"
+              MGMT_BUCKET=$(aws cloudformation describe-stacks --stack-name resco-aiml-security-mgmt --query 'Stacks[0].Outputs[?OutputKey==`AssessmentBucketName`].OutputValue' --output text 2>/dev/null)
+              if [[ $MGMT_BUCKET != "" ]]; then
+                echo "Copying management account files to local storage"
+                mkdir -p /tmp/account-files/$accountId
+                aws s3 cp s3://$MGMT_BUCKET/ /tmp/account-files/$accountId/ --recursive --exclude "*" --include "*.csv" --include "*.html" || echo "No files to copy from management account"
+              fi
+            else
+              echo "Processing member account $accountId"
+              aws sts assume-role --role-arn arn:$AWS_PARTITION:iam::$accountId:role/service-role/$RESCO_ROLE --role-session-name ReSCOAssessment > /tmp/creds.json || continue
+              export AWS_ACCESS_KEY_ID=$(cat /tmp/creds.json | jq -r '.Credentials.AccessKeyId')
+              export AWS_SECRET_ACCESS_KEY=$(cat /tmp/creds.json | jq -r '.Credentials.SecretAccessKey')
+              export AWS_SESSION_TOKEN=$(cat /tmp/creds.json | jq -r '.Credentials.SessionToken')
+              
+              ACCOUNT_BUCKET=$(aws cloudformation describe-stacks --stack-name resco-aiml-security-$accountId --query 'Stacks[0].Outputs[?OutputKey==`AssessmentBucketName`].OutputValue' --output text 2>/dev/null)
+              if [[ $ACCOUNT_BUCKET != "" ]]; then
+                echo "Copying files from $ACCOUNT_BUCKET to local storage"
+                mkdir -p /tmp/account-files/$accountId
+                aws s3 cp s3://$ACCOUNT_BUCKET/ /tmp/account-files/$accountId/ --recursive --exclude "*" --include "*.csv" --include "*.html" || echo "No files to copy from $accountId"
+              fi
+              unset AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY AWS_SESSION_TOKEN
+            fi
+          done
+          
           echo "Uploading files to management account S3 bucket and creating consolidated report"
           pip3 install beautifulsoup4
           
           # Upload files from local storage to management account S3 bucket organized by account
-          for accountId in $account_list $AWS_ACCOUNT_ID; do
+          for accountId in $account_list; do
             if [[ -d /tmp/account-files/$accountId ]]; then
               echo "Uploading files for account $accountId"
               aws s3 cp /tmp/account-files/$accountId/ s3://$BUCKET_REPORT/$accountId/ --recursive || echo "Failed to upload files for $accountId"
