--- a/buildspec.yml
+++ b/buildspec.yml
@@ -99,15 +99,18 @@ phases:
           echo "Uploading files to management account S3 bucket and creating consolidated report"
           pip3 install beautifulsoup4
           
-          # Upload files from local storage to management account S3 bucket organized by account
+          # Get management account assessment bucket name
+          MGMT_ASSESSMENT_BUCKET=$(aws cloudformation describe-stacks --stack-name resco-aiml-security-mgmt --query 'Stacks[0].Outputs[?OutputKey==`AssessmentBucketName`].OutputValue' --output text 2>/dev/null)
+          
+          # Upload files from local storage to management account assessment bucket organized by account
           for accountId in $account_list; do
             if [[ -d /tmp/account-files/$accountId ]]; then
               echo "Uploading files for account $accountId"
-              aws s3 cp /tmp/account-files/$accountId/ s3://$BUCKET_REPORT/$accountId/ --recursive || echo "Failed to upload files for $accountId"
+              aws s3 cp /tmp/account-files/$accountId/ s3://$MGMT_ASSESSMENT_BUCKET/$accountId/ --recursive || echo "Failed to upload files for $accountId"
             fi
           done
           
           # Create consolidated HTML report using separate script
-          python3 consolidate_html_reports.py
+          python3 ../consolidate_html_reports.py
         fi
       - echo "Assessment and consolidation completed"
